--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+
+a,
+a:visited,
+a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+.nav-container {
+  width: 1000px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav {
+  width: 100%;
+  background-color: #3624ff;
+  display: flex;
+  justify-content: center;
+  height: 60px;
+}
+
+ul {
+  list-style-type: none;
+  flex-basis: 550px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.active-link {
+  border-bottom: 2px solid white;
+}
