--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 a,
 a:visited,
 a:hover {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -70,4 +70,15 @@ nav ul {
 
 .active-link {
   border-bottom: 2px solid white;
+}
+
+ul {
+  color: #000;
+}
+
+.page {
+  display: flex;
+  color: black;
+  justify-content: center;
+  flex-direction: column;
 }
